# intelliwatts

./: .coverage.1e0bc6728586.pid2.XtIx3OXx.HI0tuvjPzjFh  .env  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  alembic.ini  build_tailwind.sh  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  setup.sh  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: gatekeeper.yml
app/: __init__.py  config.py  db.py  main.py
app/api/: __init__.py  routes.py
app/auth/: __init__.py  auth.py  deps.py  oauth.py
app/dev/: __init__.py  bootstrap.py
app/intervals/: __init__.py  analysis.py  client.py  definitions.py  load.py  models.py  parser.py
app/intervals/parser/: __init__.py  activity.py  power_curve.py  wellness.py
app/models/: __init__.py  plan.py  user.py
app/planning/: __init__.py  coach_prompt.py  llm.py  llm_to_icu.py  summary.py
app/planning/providers/: __init__.py  activity.py  activity_type.py  base.py  ftp_trajectory.py  intensity.py  interfaces.py  pmc.py  power_curve.py  registry.py  resting_hr.py  wellness.py
app/routers/: __init__.py  api.py  web.py
app/routes/: api.py  auth.py  secrets.py  web.py
app/security/: __init__.py  crypto.py
app/services/: __init__.py  plan_loader.py  planner.py
app/static/: style-minimal.css  style-pro.css  style-retro.css  style.css  tailwind-minimal.css  tailwind-pro.css  tailwind-retro.css  tailwind.css
app/templates/: dashboard.html  login.html  plan.html  register.html  secrets.html
app/templates/macros/: widgets.html
app/templates/widgets/: activity_type_chart.html  intensity_chart.html  pmc_chart.html  wellness_chart.html
app/utils/: __init__.py  datetime.py
docs/: dashboard-expansions.md  example_output.html  example_style.css  improvement-plan.md
docs/feature/: recovery_metrics.md
docs/superpowers/plans/: 2026-04-21-persistent-plan-storage.md
docs/superpowers/specs/: 2026-04-21-persistent-plan-storage-design.md  2026-04-28-activity-type-analysis-design.md
migrations/: env.py
migrations/versions/: 7543c1e4540b_add_user_preferences.py
sandbox/: Dockerfile  README.md  docker-compose.yml  run.sh
scripts/: __init__.py  inspect_db.py
test/: __init__.py
test/intervals/: __init__.py
tests/: conftest.py  test_athlete_journey.py  test_config.py  test_db.py  test_main.py
tests/intervals/: test_analysis.py  test_analysis_wellness.py  test_client.py  test_wellness.py
tests/intervals/parser/: test_power_curve.py  test_wellness.py
tests/models/: __init__.py  test_plan.py
tests/planning/: __init__.py  test_activity_provider.py  test_llm_to_icu.py  test_summary_wellness.py
tests/planning/providers/: __init__.py  test_activity.py  test_activity_type.py  test_ftp_trajectory.py  test_intensity.py  test_pmc.py  test_power_curve.py  test_registry.py  test_resting_hr.py  test_wellness.py
tests/routes/: __init__.py  test_integration.py
tests/security/: __init__.py  test_crypto.py
tests/services/: __init__.py  test_iterations.py  test_plan_loader.py  test_planner.py  test_planner_storage.py
tests/utils/: test_datetime.py
