[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelliwatts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "google-genai",
    "jinja2",
    "openai",
    "markdown",
    "pandas",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "requests",
    "uvicorn",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "pre-commit", "ruff", "ty"]

# Hatch configuration
[tool.hatch.build]
# Include the app/ directory directly (no src/ layout)
include = ["app/**"]

[tool.hatch.metadata]
allow-direct-references = true

# uv configuration (dependency locking handled via uv.lock)
[tool.uv]
managed = true

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

# Google Python Style Guide alignment
preview = true

[tool.ruff.lint]
# Google-specific relaxations
ignore = [
    "E501", # Line length handled by formatter guidance
    "D203", # One blank line before class (Google prefers no extra line)
    "D213", # Multi-line docstring summary on first line
]


# Docstring conventions: Google style
[tool.ruff.lint.pydocstyle]
convention = "google"
