[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelliwatts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cryptography",
    "fastapi",
    "google-genai",
    "gunicorn",
    "jinja2",
    "openai",
    "markdown",
    "pandas",
    "passlib[bcrypt]",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "python-multipart",
    "requests",
    "sqlmodel",
    "uvicorn",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "pre-commit", "ruff", "ty"]

# Hatch configuration
[tool.hatch.build]
# Include the app/ directory directly (no src/ layout)
include = ["app/**"]

[tool.hatch.metadata]
allow-direct-references = true

# uv configuration (dependency locking handled via uv.lock)
[tool.uv]
managed = true
constraint-dependencies = ["bcrypt==4.3.0"]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

# Google Python Style Guide alignment
preview = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]
# Google-specific relaxations
ignore = [
    "E501", # Line length handled by formatter guidance
    "D203", # One blank line before class (Google prefers no extra line)
    "D213", # Multi-line docstring summary on first line
]


# Docstring conventions: Google style
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]
